prepare project for Vercel deployment with unified environment setup
- Unified all environment variables into .env.local for cleaner config
- Removed duplicate .env files, keeping only .env.local and .env.example
- Added comprehensive Vercel deployment configuration (vercel.json)
- Optimized Next.js config for production (ESLint skip, external packages)
- Enhanced error handling in register API with detailed logging
- Added notification system with toast messages for better UX
- Created Vercel deployment guide (VERCEL_DEPLOY.md)
- Updated package.json with Vercel-specific build commands
- Configured TypeScript and ESLint for production builds
- Added security headers and performance optimizations
- Database connection verified with .env.local configuration

Ready for: Vercel deployment, Blob storage integration, production use

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,18 @@ next-env.d.ts
 # Copilot rules
 /EduGradeLab-Web/copilot-rules.md
 .github/copilot-instructions.md
+
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# prisma
+prisma/generated/
+
+# uploads & temp files
+uploads/
+temp/
+next-env.d.ts
+
+/src/generated/prisma
